--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "bla",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node ./src/loader.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "simple-node-logger": "^18.12.23"
   }
 }
